terraform/modules/bastion_server/main.tf
# Bastion Server
resource "aws_instance" "cyber94_vulnerability_scanner_bastion"{
  ami = "ami-0943382e114f188e8"
  instance_type = "t2.micro"
  key_name = "cyber94-bdeadfield"
  associate_public_ip_address = true
  subnet_id = var.var_bastion_subnet_id

  vpc_security_group_ids = [aws_security_group.cyber94_vulnerability_scanner_sg_bastion_tf.id]

  user_data = templatefile("../init-scripts/mysql-install.sh", {SPECIAL_ARG= var.var_database_ip_address})
  tags = {
    Name = "cyber94_vulnerability_scanner_bastion"
  }

  lifecycle {
    create_before_destroy = true
  }
}

# Bastion Security Group
resource "aws_security_group" "cyber94_vulnerability_scanner_sg_bastion_tf"{
  name = "cyber94_vulnerability_scanner_sg_bastion"
  description = "Allow Web inbound traffic"
  vpc_id = var.var_aws_vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "cyber94_vulnerability_scanner_sg_bastion"
  }
}
